--- a/client/views/pages/index.html
+++ b/client/views/pages/index.html
@@ -1,6 +1,6 @@
 <template name="index">
     <div class="row">
-        <div class="col-md-8 col-md-offset-2">
+        <div class="col-md-10 col-md-offset-1">
             <table class="table table-bordered">
                 <!-- <thead>
                     <tr>
@@ -12,10 +12,10 @@
                     <tr>
                         <td>{{title}}</td>
                         <td>{{author}}</td>
-                        <td>{{date}}</td>
+                        <td>{{fromNow}}</td>
                     </tr>
                     {{/each}}
-                </tbody>    
+                </tbody>
             </table>
         </div>
     </div>
