Add signup feature

--- a/client/views/header.html
+++ b/client/views/header.html
@@ -7,7 +7,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Forum</a>
+      <a class="navbar-brand" href="{{pathFor 'index'}}">Forum</a>
     </div>
     <div class="collapse navbar-collapse" id="bs-navbar-collapse">
       {{#if user}}
