--- a/client/views/pages/login.html
+++ b/client/views/pages/login.html
@@ -1,4 +1,5 @@
 <template name="login">
+  {{> errors}}
   <div id="div-login" class="row">
     <div class="col-md-4 col-md-offset-4 col-sm-6 col-sm-offset-3 col-xs-10 col-xs-offset-1">
 
