--- a/client/views/pages/signup.html
+++ b/client/views/pages/signup.html
@@ -1,4 +1,5 @@
 <template name="signup">
+  {{> errors}}
   <div id="div-signup" class="row">
     <div class="col-md-4 col-md-offset-4 col-sm-6 col-sm-offset-3 col-xs-10 col-xs-offset-1">
 
