Modify 404,index style

--- a/client/views/404.html
+++ b/client/views/404.html
@@ -1,5 +1,6 @@
 <template name="notFoundTemplate">
-  <div class="text-center">
-    <h2> 404 </h2>
+  <div class="div-full-center">
+    <span class="span-1"> </span>
+    <a href="{{pathFor 'index'}}" class="a-middle">404</a>
   </div>
 </template>
