--- a/client/views/pages/post.html
+++ b/client/views/pages/post.html
@@ -1,15 +1,42 @@
 <template name="post">
   <div class="col-md-10 col-md-offset-1">
     {{title}}
+    {{#with post}}
     <div class="panel panel-default">
-      {{#with post}}
       <div class="panel-heading">
         <h3 class="panel-title">{{title}}</h3>
       </div>
       <div class="panel-body">
-          {{content}}
+        {{content}}
       </div>
-      {{/with}}
     </div>
+    {{/with}}
+
+    {{#if comments}}
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        回复
+      </div>
+      <ul class="list-group">
+        {{#each comments}}
+        <li class="list-group-item">{{author}} : {{content}}</li>
+        {{/each}}
+      </ul>
+    </div>
+    {{/if}}
+
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        发表回复
+      </div>
+      <div class="panel-body">
+        <fieldset>
+          <textarea id="ta-comment" class="form-control" rows="8"></textarea>
+        </fieldset>
+
+        <button id="btn-submit" type="button" class="btn btn-default">发表</button>
+      </div>
+    </div>
+
   </div>
 </template>
