Add notifies collection

--- a/client/views/header.html
+++ b/client/views/header.html
@@ -15,11 +15,14 @@
         <li>
           <a id="a-submit" href="#">发布</a>
         </li>
+        <li>
+          <a id="a-submit" href="#">通知 &nbsp; <i>10</i></a>
+        </li>
         <li class="active">
           <a href="{{pathFor 'index'}}">{{currentUser.username}}</a>
         </li>
         <li>
-          <a href="#" id="a-logout">退出</a>
+          <a id="a-logout" href="#">退出</a>
         </li>
       </ul>
       {{else}}
