--- a/client/views/pages/index.html
+++ b/client/views/pages/index.html
@@ -4,7 +4,8 @@
       <div class="posts">
           {{#each posts}}
           <div class="row post" url="/post/{{_id}}">
-            <span class="col-md-6">{{title}}</span>
+            <span class="col-md-2">{{visitedCount}}</span>
+            <span class="col-md-4">{{title}}</span>
             <span class="col-md-2">{{author}}</span>
             <span class="col-md-2">{{fromNow}}</span>
           </div>
