--- a/client/views/header.html
+++ b/client/views/header.html
@@ -1,5 +1,5 @@
 <template name="header">
-  <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+  <nav class="header navbar navbar-default navbar-fixed-top" role="navigation">
     <div class="navbar-header">
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-navbar-collapse">
         <span class="sr-only">Toggle navigation</span>
@@ -7,7 +7,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="{{pathFor 'index'}}">Forum</a>
+      <a class="navbar-brand" href="{{pathFor 'index'}}">Meteor</a>
     </div>
     <div class="collapse navbar-collapse" id="bs-navbar-collapse">
       {{#if currentUser}}
