--- a/client/views/main.html
+++ b/client/views/main.html
@@ -1,6 +1,6 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <title>Forum</title>
+  <title>Meteor</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
