--- a/client/views/main.html
+++ b/client/views/main.html
@@ -3,4 +3,5 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <title>Meteor</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" href="/favicon.ico" type="image/x-icon">
 </head>
