Modify style for post page

--- a/client/views/layout/layout.html
+++ b/client/views/layout/layout.html
@@ -1,6 +1,6 @@
 <template name="layout">
   {{> yield region="header"}}
-  <div class="content">
+  <div class="content container-fluid">
       {{> yield}}
   </div>
   {{> yield region="footer"}}
