--- a/client/stylesheets/index.css
+++ b/client/stylesheets/index.css
@@ -24,11 +24,11 @@ a[class="post-title"] {
   display: inline-block;
   vertical-align: bottom;
 }
-code {
-  font-family: Inconsolata, Consolas, "DEJA VU SANS MONO", "DROID SANS MONO", Proggy, monospace;
-}
 small {
   font-style: italic;
   color: #999;
   font-size: 15px;
+}
+span:before {
+  content: "• "
 }
