--- a/client/views/pages/index.html
+++ b/client/views/pages/index.html
@@ -1,6 +1,5 @@
 <template name="index">
-    <div class="col-md-2 col-xs-1"></div>
-    <div class="col-md-8 col-xs-10">
+    <div class="col-md-8 col-md-offset-2 col-xs-10 col-xs-offset-1">
       {{#each posts}}
       <div class="post-row">
         <a class="post-title" href="/post/{{_id}}">
