--- a/client/views/pages/submit.html
+++ b/client/views/pages/submit.html
@@ -1,11 +1,12 @@
 <template name="submit">
   <div class="row">
     <div class="col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2 col-xs-10 col-xs-offset-1">
+      {{> errors}}
       <fieldset>
-        <textarea id="ta-title" class="form-control" rows="1" placeholder="标题（字数8字以上）"></textarea>
-        <textarea id="ta-content" class="form-control" rows="20"></textarea> 
+        <textarea id="ta-post-title" class="form-control" rows="1" placeholder="标题（字数8字以上）"></textarea>
+        <textarea id="ta-post-content" class="form-control" rows="20"></textarea> 
       </fieldset>
-      <button id="btn-submit" type="button" class="btn btn-default">发布</button>
+      <button id="btn-post-submit" type="button" class="btn btn-default">发布</button>
     </div>
   </div>
 </template>
