Add for postEdit

--- a/client/views/pages/post.html
+++ b/client/views/pages/post.html
@@ -33,7 +33,7 @@
     {{/if}} {{#if currentUser}}
     <div class="">
         <fieldset>
-          <textarea class="form-control" rows="8"></textarea>
+          <textarea id="ta-post-comment" class="form-control" rows="8"></textarea>
         </fieldset>
 
         <button id="btn-submit" type="button" class="btn btn-default">回复</button>
