--- a/client/stylesheets/post.css
+++ b/client/stylesheets/post.css
@@ -6,110 +6,89 @@
   border-bottom: 2px LightGrey dotted;
   color: #333;
 }
-
 .post-body {
   padding: 10px 10px 20px 10px;
   margin-bottom: 20px;
   /*border-bottom: 2px LightGrey solid;*/
 }
-
 .comment-body {
   padding: 20px;
   margin-bottom: 10px;
   border-top: 2px LightGrey dashed;
 }
-
+#ta-post-comment {
+  margin-bottom: 10px;
+}
 .mk {
   word-wrap: break-word;
 }
-
 .mk H1 {
-    font-family: "Palatino Linotype", "Book Antiqua", Palatino, Helvetica, STKaiti, SimSun, serif;
+  font-family: "Palatino Linotype", "Book Antiqua", Palatino, Helvetica, STKaiti, SimSun, serif;
 }
-
 .mk H2 {
-    font-family: "Palatino Linotype", "Book Antiqua", Palatino, Helvetica, STKaiti, SimSun, serif;
-    padding: 5px;
-    /*border-bottom: 2px LightGrey solid;*/
-    width: 90%;
-    line-height: 150%;
-    color: #666666;
+  font-family: "Palatino Linotype", "Book Antiqua", Palatino, Helvetica, STKaiti, SimSun, serif;
+  padding: 5px;
+  /*border-bottom: 2px LightGrey solid;*/
+  width: 90%;
+  line-height: 150%;
+  color: #666666;
 }
-
-
 .mk H3 {
-    font-family: "Palatino Linotype", "Book Antiqua", Palatino, Helvetica, STKaiti, SimSun, serif;
-    /*border-bottom: 1px LightGrey solid;*/
-    width: 80%;
-    line-height: 150%;
-    color: #666666;
+  font-family: "Palatino Linotype", "Book Antiqua", Palatino, Helvetica, STKaiti, SimSun, serif;
+  /*border-bottom: 1px LightGrey solid;*/
+  width: 80%;
+  line-height: 150%;
+  color: #666666;
 }
-
 .mk H4 {
-    font-family: "Palatino Linotype", "Book Antiqua", Palatino, Helvetica, STKaiti, SimSun, serif;
-    /*border-bottom: 1px LightGrey solid;*/
-    width: 80%;
-    line-height: 150%;
-    color: #666666;
+  font-family: "Palatino Linotype", "Book Antiqua", Palatino, Helvetica, STKaiti, SimSun, serif;
+  /*border-bottom: 1px LightGrey solid;*/
+  width: 80%;
+  line-height: 150%;
+  color: #666666;
 }
-
-
 .mk li {
-    margin-left: 10px;
+  margin-left: 10px;
 }
-
-
 .mk blockquote {
-    border-left: 4px lightgrey solid;
-    padding-left: 5px;
-    margin-left: 20px;
+  border-left: 4px lightgrey solid;
+  padding-left: 5px;
+  margin-left: 20px;
 }
-
-
 .mk pre {
-    font-family: Inconsolata, Consolas, "DEJA VU SANS MONO", "DROID SANS MONO", Proggy, monospace;
-    font-size: 75%;
-    border: solid 1px lightgrey;
-    background-color: Ivory;
-    padding: 5px;
-    line-height: 130%;
-    margin-left: 10px;
-    width: 95%;
+  font-family: Inconsolata, Consolas, "DEJA VU SANS MONO", "DROID SANS MONO", Proggy, monospace;
+  font-size: 75%;
+  border: solid 1px lightgrey;
+  background-color: Ivory;
+  padding: 5px;
+  line-height: 130%;
+  margin-left: 10px;
+  width: 95%;
 }
-
-
 .mk code {
-    font-family: Inconsolata, Consolas, "DEJA VU SANS MONO", "DROID SANS MONO", Proggy, monospace;
-    font-size: 90%;
+  font-family: Inconsolata, Consolas, "DEJA VU SANS MONO", "DROID SANS MONO", Proggy, monospace;
+  font-size: 90%;
 }
-
-
 .mk a {
-    text-decoration: none;
-    cursor: crosshair;
-    border-bottom: 1px dashed #333;
-    padding: 1px;
-    color: black;
+  text-decoration: none;
+  cursor: crosshair;
+  border-bottom: 1px dashed #333;
+  padding: 1px;
+  color: black;
 }
-
-
-.mk  a:hover {
-    background-color: #999;
+.mk a:hover {
+  background-color: #999;
 }
-
-
-.mk  img {
-    display: block;
-    border-radius: 6px;
-    /*margin-left: auto;*/
-    /*margin-right: auto;*/
-    margin-top: 10px;
-    margin-bottom: 10px;
-    /*box-shadow: 0 0 10px #555;*/
-    /*-webkit-box-shadow: 0 0 10px #555;*/
+.mk img {
+  display: block;
+  border-radius: 6px;
+  /*margin-left: auto;*/
+  /*margin-right: auto;*/
+  margin-top: 10px;
+  margin-bottom: 10px;
+  /*box-shadow: 0 0 10px #555;*/
+  /*-webkit-box-shadow: 0 0 10px #555;*/
 }
-
-
-.mk  hr {
-    color: LightGrey;
+.mk hr {
+  color: LightGrey;
 }
