--- a/client/views/pages/postSubmit.html
+++ b/client/views/pages/postSubmit.html
@@ -1,4 +1,4 @@
-<template name="submit">
+<template name="postSubmit">
   <div class="row">
     <div class="col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2 col-xs-10 col-xs-offset-1">
       {{> errors}}
