--- a/client/stylesheets/post.css
+++ b/client/stylesheets/post.css
@@ -9,7 +9,7 @@
 .post-body {
   padding: 10px 10px 20px 10px;
   margin-bottom: 20px;
-  /*border-bottom: 2px LightGrey solid;*/
+  /*border-bottom: 4px LightGrey double;*/
 }
 .comment-body {
   padding: 20px;
@@ -91,4 +91,6 @@
 }
 .mk hr {
   color: LightGrey;
+/*  width: 80%;
+  align: left;*/
 }
