--- a/client/views/pages/index.html
+++ b/client/views/pages/index.html
@@ -7,8 +7,9 @@
         </a>
         <br/>
         <small>
-          <span class="">{{author}} 发表于 {{fromNow}}</span>
-          <span class="">已被浏览 {{visitedCount}} 次</span>
+          <span>{{author}} 发表于 {{fromNow}}</span>
+          <span>浏览 {{visitedCount}} 次</span>
+          <span>评论 {{commentedCount}} 次</span>
         </small>
       </div>
       {{/each}}
