--- a/client/views/pages/index.html
+++ b/client/views/pages/index.html
@@ -13,5 +13,10 @@
         </small>
       </div>
       {{/each}}
+      {{#if haveMore}}
+        <div id="div-have-more">
+          加载
+        </div>
+      {{/if}}
     </div>
 </template>
