--- a/client/stylesheets/index.css
+++ b/client/stylesheets/index.css
@@ -1,10 +1,11 @@
 body {
-  font-family: STFangSong, Helvetica, Arial, Vernada, Tahoma, STXihei, "Microsoft YaHei", "Songti SC", SimSun, Heiti, sans-serif;
+  /*font-family: STFangSong, Helvetica, Arial, Vernada, Tahoma, STXihei, "Microsoft YaHei", "Songti SC", SimSun, Heiti, sans-serif;*/
+  font-family: 'Helvetica Neue',Helvetica,Arial,Sans-serif;
   font-size: 18px;
-  /*border: 1px solid LightGrey;*/
 }
 a {
   font-family: "Palatino Linotype", "Book Antiqua", Palatino, Helvetica, STKaiti, SimSun, serif;
+  /*font-family: 'Helvetica Neue',Helvetica,Arial,Sans-serif;*/
   color: #333;
 }
 a:visited {
@@ -16,7 +17,8 @@ a:visited {
 }
 a[class="post-title"] {
   font-size: 20px;
-  line-height: 25px;
+  line-height: 26px;
+  /*font-weight: bold;*/
   /*max-width: 80%;*/
   text-overflow: ellipsis;
   -o-text-overflow: ellipsis;
@@ -25,9 +27,11 @@ a[class="post-title"] {
   vertical-align: bottom;
 }
 small {
-  font-style: italic;
+  /*font-family: 'Helvetica Neue',Helvetica,Arial,Sans-serif;*/
+  /*font-style: italic;*/
   color: #999;
-  font-size: 15px;
+  font-size: 12px;
+  white-space: nowrap;
 }
 span:before {
   content: "• "
