--- a/client/views/pages/post.html
+++ b/client/views/pages/post.html
@@ -2,7 +2,7 @@
   <div class="col-md-8 col-md-offset-2 col-xs-10 col-xs-offset-1">
     {{#with post}}
     <div class="post-header">
-      {{title}}
+      <strong>{{title}}</strong>
       <br/>
       <small>
           <span>{{author}} 发表于 {{fromNow}}</span>
@@ -25,7 +25,6 @@
       {{#each comments}}
       <div class="comment-body">
         <p class="mk">{{#markdown}}{{content}}{{/markdown}}</p>
-        <br/>
         <small>
           <span class="">{{author}} 回复于 {{fromNow}}</span>
         </small>
