Modify css style

--- a/client/stylesheets/index.css
+++ b/client/stylesheets/index.css
@@ -1,6 +1,6 @@
 body {
   /*font-family: STFangSong, Helvetica, Arial, Vernada, Tahoma, STXihei, "Microsoft YaHei", "Songti SC", SimSun, Heiti, sans-serif;*/
-  font-family: 'Helvetica Neue',Helvetica,Arial,Sans-serif;
+  font-family: 'Helvetica Neue',Helvetica,Verdana,Arial,Sans-serif;
   font-size: 18px;
 }
 a {
