--- a/client/views/pages/post.html
+++ b/client/views/pages/post.html
@@ -2,17 +2,20 @@
   <div class="col-md-8 col-md-offset-2 col-xs-10 col-xs-offset-1">
     {{#with post}}
     <div class="post-header">
-      <strong>{{title}}</strong>
-      <br/>
-      <small>
-          <span>{{author}} 发表于 {{fromNow}}</span>
-          <span>浏览 {{visitedCount}} 次</span>
-          <span>评论 {{commentedCount}} 次</span>
-      </small>
-      <!-- <button id="btn-edit" type="button" class="btn btn-default pull-right">编辑</button> -->
-      {{#if equal currentUser._id userId}}
-        <a href="/post/edit/{{_id}}" class="pull-right">编辑</a>
-      {{/if}}
+      <div class="post-title">
+        <strong>{{title}}</strong>
+      </div>
+      <div class="desc">
+        <small>
+            <span>{{author}} 发表于 {{fromNow}}</span>
+            <span>浏览 {{visitedCount}} 次</span>
+            <span>评论 {{commentedCount}} 次</span>
+        </small>
+        {{#if equal currentUser._id userId}}
+          <a href="/post/edit/{{_id}}">编辑</a>
+        {{/if}}
+      </div>
+
     </div>
     <div class="post-body">
       <p class="mk">
@@ -25,9 +28,11 @@
       {{#each comments}}
       <div class="comment-body">
         <p class="mk">{{#markdown}}{{content}}{{/markdown}}</p>
-        <small>
-          <span class="">{{author}} 回复于 {{fromNow}}</span>
-        </small>
+        <div class="desc">
+          <small>
+            <span class="">{{author}} 回复于 {{fromNow}}</span>
+          </small>
+        </div>
       </div>
       {{/each}}
     </div>
