--- a/client/views/pages/post.html
+++ b/client/views/pages/post.html
@@ -12,7 +12,7 @@
             <span>评论 {{commentedCount}} 次</span>
         </small>
         {{#if equal currentUser._id userId}}
-          <a href="/post/edit/{{_id}}">编辑</a>
+          <a class="float-right" href="/post/edit/{{_id}}">编辑</a>
         {{/if}}
       </div>
 
