--- a/client/views/pages/postSubmit.html
+++ b/client/views/pages/postSubmit.html
@@ -5,8 +5,12 @@
       <fieldset>
         <textarea id="ta-post-title" class="form-control" rows="1" placeholder="标题（字数8字以上）"></textarea>
         <textarea id="ta-post-content" class="form-control" rows="20"></textarea> 
+        <p id="p-post-preview" style="display:none;" class="mk">
+          {{#markdown}}{{{markdown_data}}}{{/markdown}}
+        </p>
       </fieldset>
       <button id="btn-post-submit" type="button" class="btn btn-default">发布</button>
+      <button id="btn-post-preview" type="button" class="btn btn-default" value="preview">预览</button>
     </div>
   </div>
 </template>
