--- a/client/views/header.html
+++ b/client/views/header.html
@@ -16,7 +16,7 @@
           <a href="{{pathFor 'postSubmit'}}">发布</a>
         </li>
         <li>
-          <a href="{{pathFor 'notify'}}">通知 &nbsp; <i class="badge">{{notifyCount}}</i></a>
+          <a href="{{pathFor 'notify'}}">通知 &nbsp; <i id="i-notify-count" class="badge">{{notifyCount}}</i></a>
         </li>
         <li id="li-username">
           <a href="{{pathFor 'index'}}">{{currentUser.username}}</a>
