--- a/client/stylesheets/header.css
+++ b/client/stylesheets/header.css
@@ -1,13 +1,14 @@
 .header {
-    background-color: white;
+  background-color: white;
 }
-
 #bs-navbar-collapse {
-    padding-left: 45px;
-    padding-right: 45px;
+  padding-left: 45px;
+  padding-right: 45px;
 }
-
 #a-title {
-    font-size: 35px;
-    color: black;
+  font-size: 35px;
+  color: black;
+}
+#i-notify-count {
+  vertical-align: bottom;
 }
