--- a/client/views/header.html
+++ b/client/views/header.html
@@ -7,7 +7,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="{{pathFor 'index'}}" id="a-title">Meteor</a>
+      <a class="navbar-brand" href="{{pathFor 'index'}}" id="a-title">CMeteor</a>
     </div>
     <div class="collapse navbar-collapse" id="bs-navbar-collapse">
       {{#if currentUser}}
