--- a/client/views/pages/signup.html
+++ b/client/views/pages/signup.html
@@ -15,6 +15,10 @@
         <label for="password">密码：</label>
         <input type="password" class="form-control" id="password" placeholder="密码">
       </div>
+      <div class="form-group">
+	<label for="password1">再次输入密码：</label>
+      <input type="password" class="form-control" id="password1" placeholder="再次输入密码">
+      </div>
 
       <button type="button" class="btn btn-default" id="btn-signup-reset">重置</button>
       <button type="submit" class="btn btn-default" id="btn-signup">注册</button>
