Add changePassword of user

--- a/client/views/header.html
+++ b/client/views/header.html
@@ -19,7 +19,7 @@
           <a href="{{pathFor 'notify'}}">通知 &nbsp; <i id="i-notify-count" class="badge">{{notifyCount}}</i></a>
         </li>
         <li id="li-username">
-          <a href="{{pathFor 'index'}}">{{currentUser.username}}</a>
+          <a href="{{pathFor 'userhome'}}">{{currentUser.username}}</a>
         </li>
         <li>
           <a id="a-logout" href="#">退出</a>
