some buttons color change

--- a/client/views/pages/postEdit.html
+++ b/client/views/pages/postEdit.html
@@ -11,7 +11,7 @@
           {{#markdown}}{{{markdown_data}}}{{/markdown}}
         </p>
       </fieldset>
-      <button id="btn-post-edit" type="button" class="btn btn-default">重新发布</button>
+      <button id="btn-post-edit" type="button" class="btn btn-primary">重新发布</button>
       <button id="btn-post-preview" type="button" class="btn btn-default" value="preview">预览</button>
     </div>
   </div>
