--- a/client/views/pages/signup.html
+++ b/client/views/pages/signup.html
@@ -21,7 +21,7 @@
       </div>
 
       <button type="button" class="btn btn-default" id="btn-signup-reset">重置</button>
-      <button type="submit" class="btn btn-default" id="btn-signup">注册</button>
+      <button type="submit" class="btn btn-primary" id="btn-signup">注册</button>
 
     </div>
   </div>
