--- a/client/views/pages/postSubmit.html
+++ b/client/views/pages/postSubmit.html
@@ -9,7 +9,7 @@
           {{#markdown}}{{{markdown_data}}}{{/markdown}}
         </p>
       </fieldset>
-      <button id="btn-post-submit" type="button" class="btn btn-primary">发布</button>
+      <button id="btn-post-submit" type="button" class="btn btn-default">发布</button>
       <button id="btn-post-preview" type="button" class="btn btn-default" value="preview">预览</button>
     </div>
   </div>
