Add website statistics

--- a/client/views/main.html
+++ b/client/views/main.html
@@ -5,3 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" href="/favicon.ico" type="image/x-icon">
 </head>
+<body>
+  <script src="http://s4.cnzz.com/z_stat.php?id=1253546497&web_id=1253546497" language="JavaScript"></script>
+</body>
