--- a/client/views/footer.html
+++ b/client/views/footer.html
@@ -2,4 +2,5 @@
   <div class="footer">
       © 2014 <a href="https://github.com/cmeteor-org/cmeteor">CMeteor</a>
   </div>
+  <script src="http://s4.cnzz.com/z_stat.php?id=1253546497&web_id=1253546497" language="JavaScript"></script>
 </template>
