use less instead of css

--- a/client/stylesheets/util/footer.import.less
+++ b/client/stylesheets/util/footer.import.less
@@ -1,7 +1,7 @@
 .footer {
   text-align: center;
   margin-top: 50px;
-}
-.footer  a:visited {
-   color: #333;
+  a:visited {
+    color: @color-post-div;
+  }
 }
