fix notifiy css error and change notify data structure

--- a/client/stylesheets/posts/index.import.less
+++ b/client/stylesheets/posts/index.import.less
@@ -14,12 +14,6 @@
       color: black;
     }
   }
-  .read {
-    color: #888;
-  }
-  .notify-row {
-    height: 2.5em;
-  }
 }
 
 /*main content*/
@@ -28,6 +22,16 @@
   &>div {
     float: none;
   }
+  //notify start
+  .row {
+    .read {
+      color: #888;
+    }
+    .notify-row {
+      height: 2.5em;
+    }
+  }
+  // notify end
   padding-top: 50px;
   .index-row {
     margin-top: 0.625em;
